# eve

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  ast.c  ast.h  code.c  code.h  common.h  compiler.c  debug.c  defs.h  errors.c  errors.h  gen.c  gen.h  lexer.c  lexer.h  main.c  memory.c  memory.h  parser.c  parser.h  table.c  table.h  util.c  util.h  value.c  value.h  vec.c  vm.c  vm.h
src/: ast.c  ast.h  code.c  code.h  common.h  compiler.c  compiler.h  core.c  core.h  debug.c  debug.h  defs.h  errors.c  errors.h  gc.c  gc.h  gen.c  gen.h  inc.h  lexer.c  lexer.h  main.c  map.c  map.h  memory.c  memory.h  opcode.h  parser.c  parser.h  serde.c  serde.h  util.c  util.h  value.c  value.h  vec.c  vec.h  vm.c  vm.h
src/.eve/: builtins.eve
tests/: block.eve  bool.eve  circular.eve  closure.eve  comment.eve  core-1.eve  core-2.eve  driver.sh  error.eve  evecache.eve  expr.eve  fib.eve  for.eve  function.eve  gc.eve  hashmap.eve  if.eve  import.eve  instance.eve  iter.eve  list.eve  module.eve  none.eve  number.eve  program.eve  string.eve  struct.eve  tco.eve  test.eve  throw.eve  try.eve  var.eve  while.eve
